fixed overflow issue

--- a/styles/sass/partials/_body.scss
+++ b/styles/sass/partials/_body.scss
@@ -25,7 +25,7 @@ main {
     background-repeat: no-repeat;
     padding: 40px;
     // height: 80vh;
-    // overflow: scroll;
+    overflow: hidden;
 }
 
 .contentContainer {
